@@ -174,6 +174,7 @@ Floris Bruynooghe
 Stan Bubrouski
 Erik de Bueger
 Jan-Hein Bührman
+Lars Buitinck
 Dick Bulterman
 Bill Bumgarner
 Jimmy Burgett
@@ -872,6 +873,7 @@ Neil Muller
 Louis Munro
 R. David Murray
 Matti Mäki
+Jörg Müller
 Dale Nagata
 John Nagle
 Takahiro Nakayama
