@@ -387,6 +387,10 @@ Tests
 C-API
 -----
 
+- Issue #9369: The types of `char*` arguments of PyObject_CallFunction() and
+  PyObject_CallMethod() now changed to `const char*`.  Based on patches by
+  Jörg Müller and Lars Buitinck.
+
 - Issue #17206: Py_CLEAR(), Py_DECREF(), Py_XINCREF() and Py_XDECREF() now
   expand their arguments once instead of multiple times.  Patch written by Illia
   Polosukhin.
